<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_android_wear_notification_needs_update_text"><g id="app_name">%1$s</g> requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text"><g id="app_name">%1$s</g>" won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="Change_description">Изменить описание</string>
    <string name="Delete_photo">Удалить фотографию</string>
    <string name="Edit_album">Редактировать альбом</string>
    <string name="Mark_photo_spam">Отметить как спам</string>
    <string name="Photo_info">Информация о фото</string>
    <string name="Remove_album">Удалить альбом</string>
    <string name="Set_main_photo">Сменить главное фото</string>
    <string name="Show_tags">Показать метки</string>
    <string name="Title">Название</string>
    <string name="Use_as_album_cover">На обложку альбома</string>
    <string name="Use_as_avatar">Сделать главной</string>
    <string name="access_classmates">Одноклассникам</string>
    <string name="access_close_friends">Лучшим друзьям</string>
    <string name="access_colleagues">Коллегам</string>
    <string name="access_companions_in_arms">Сослуживцам</string>
    <string name="access_coursemates">Однокурсникам</string>
    <string name="access_friends">Друзьям</string>
    <string name="access_love">Своей половинке</string>
    <string name="access_public">Всем пользователям</string>
    <string name="access_relatives">Родственникам</string>
    <string name="add_music">Добавить</string>
    <string name="album_info">Информация об альбоме</string>
    <string name="album_music">Альбом</string>
    <string name="app_poll">Опрос</string>
    <string name="app_poll_display_duration_interval">Интервал когда опрос показывается. В секундах</string>
    <string name="app_poll_display_interval">Интервал между показами. В секундах</string>
    <string name="app_poll_load_interval">Интервал загрузки опроса. В секундах</string>
    <string name="app_poll_repeat_mode">По кругу</string>
    <string name="app_poll_timing_interval">Интервал загрузки с сервера интервалов. В секундах</string>
    <string name="artist_music">Исполнитель</string>
    <string name="banner_expiration_summary">Время в секундах, после которого баннеры удаляются из кэша</string>
    <string name="banner_expiration_title">Срок хранения баннеров</string>
    <string name="banner_interval_summary">Интервал автоматического обновления баннеров в ленте в секундах</string>
    <string name="banner_interval_title">Интервал обновления баннеров</string>
    <string name="block_user">Заблокировать автора</string>
    <string name="button_text_message">Cообщение</string>
    <string name="call_text">Позвонить</string>
    <string name="close">Закрыть</string>
    <string name="collage_interval_summary">Интервал автоматического обновления фото коллажей в ленте в секундах</string>
    <string name="collage_interval_title">Интервал обновления фото коллажей</string>
    <string name="complaint">Пожаловаться</string>
    <string name="conversation_participants">Участники</string>
    <string name="conversation_shortcut">Создать ярлык</string>
    <string name="copy_link">Копировать ссылку</string>
    <string name="copy_text">Копировать</string>
    <string name="debug_mode">Отладочный режим</string>
    <string name="deep_link_injection_title">Инъекция deeplink-ов</string>
    <string name="deep_link_install_url_title">Install URL</string>
    <string name="deep_link_type_title">Тип deeplink-а</string>
    <string name="deep_link_url_title">Deeplink URL</string>
    <string name="delete_all_messages_menu_text">Удалить переписку</string>
    <string name="delete_from_feed">Удалить из ленты</string>
    <string name="delete_from_friends">Удалить из друзей</string>
    <string name="delete_message_menu_text">Удалить сообщение</string>
    <string name="delete_messages_menu_text">Удалить сообщения</string>
    <string name="delete_own_tag">Удалить свою фотометку</string>
    <string name="description_share">Поделиться</string>
    <string name="edit_menu_text">Править</string>
    <string name="error_info">Информация об ошибке</string>
    <string name="go_to_author">К автору</string>
    <string name="go_to_group">К группе</string>
    <string name="invite">Добавить собеседников</string>
    <string name="invite_friend">Дружить</string>
    <string name="invite_friend_in_group">Пригласить друзей</string>
    <string name="invite_group">Вступить в группу</string>
    <string name="invite_group_happening">Я пойду</string>
    <string name="invite_to_group_menu">Пригласить в группу</string>
    <string name="leave_chat">Покинуть переписку</string>
    <string name="leave_group">Выйти из группы</string>
    <string name="like">Класс!</string>
    <string name="may_invite_group_happening">Возможно, пойду</string>
    <string name="media_composer_add_music">Добавить музыку</string>
    <string name="media_composer_add_photo">Добавить фотографию</string>
    <string name="media_composer_add_poll">Добавить опрос</string>
    <string name="media_composer_to_status">В статус</string>
    <string name="media_composer_with_friends">С друзьями</string>
    <string name="media_composer_with_place">Добавить место</string>
    <string name="mediatopic_task_edit">"  Изменить  "</string>
    <string name="open_in_browser">Перейти</string>
    <string name="persistent_task_cancel">"  Отменить  "</string>
    <string name="persistent_task_pause">"  Остановить  "</string>
    <string name="persistent_task_resume">"  Продолжить  "</string>
    <string name="persistent_task_retry">"  Заново  "</string>
    <string name="playlist">Список воспроизведения</string>
    <string name="pref_category_settings">Настройки</string>
    <string name="pref_category_test_mediatopics">Форма постинга</string>
    <string name="random_friendship_mode">Режим дружбы</string>
    <string name="random_friendship_mode_off">Режим дружбы выключен. Обычная лента</string>
    <string name="random_friendship_mode_on">Вместо обычой ленты будет лента со случайно сгененрированными событиями дружбы</string>
    <string name="reply">Ответить</string>
    <string name="resend_menu_text">Отправить повторно</string>
    <string name="resume_upld_ttl">Загрузить фотографии</string>
    <string name="route">Cast видео</string>
    <string name="save">Сохранить</string>
    <string name="set_relation">Указать, кто он вам</string>
    <string name="settings">Настройки</string>
    <string name="spam_messages_menu_text">Пожаловаться на спам</string>
    <string name="stream">Лента</string>
    <string name="stream_debug_mode_summary_off">Обычная лента без отладочной информации</string>
    <string name="stream_debug_mode_summary_on">В ленте показывается отладочная информация для разработчиков</string>
    <string name="subscribe">Подписаться</string>
    <string name="test_check_update_always_summary_off">Проверка наличия обновлений выполняется раз в сутки</string>
    <string name="test_check_update_always_summary_on">При каждом запуске приложения выполняется проверка наличия обновлений</string>
    <string name="test_check_update_always_title">Проверять всегда</string>
    <string name="test_check_update_category">Проверка обновлений</string>
    <string name="test_localization_category">Локализация</string>
    <string name="test_localization_update_interval">Интервал обновления локализации</string>
    <string name="test_pref_address_key">test_preferences_address</string>
    <string name="test_pref_address_title">Address</string>
    <string name="test_pref_api_session_key_key">test_api_session_key</string>
    <string name="test_pref_api_session_key_message">Сбросить сессию API?</string>
    <string name="test_pref_api_session_key_title">API Session Key</string>
    <string name="test_pref_app_key_key">test_preferences_app_key</string>
    <string name="test_pref_app_key_title">AppKey</string>
    <string name="test_pref_app_secret_key_key">test_preferences_app_secret_key</string>
    <string name="test_pref_app_secret_key_title">AppSecretKey</string>
    <string name="test_pref_app_version_key">test_preferences_app_version_key</string>
    <string name="test_pref_app_version_title">AppVersion</string>
    <string name="test_pref_environment_key">test_preferences_environment</string>
    <string name="test_pref_environment_title">Environment</string>
    <string name="test_pref_locale_key">test_preferences_locale</string>
    <string name="test_pref_locale_title">Locale package</string>
    <string name="test_pref_mt_allow_check_restricted_key">test_mt_allow_check_restricted</string>
    <string name="test_pref_mt_allow_check_restricted_summary_off">Невозможно отметить друзей, которые запретили их отмечать</string>
    <string name="test_pref_mt_allow_check_restricted_summary_on">Можно отметить друзей, которые запретили их отмечать</string>
    <string name="test_pref_mt_allow_check_restricted_title">Разрешить отмечать всех</string>
    <string name="test_pref_mt_dont_enforce_limits_key">test_mt_dont_enforce_limits</string>
    <string name="test_pref_mt_dont_enforce_limits_summary_off">Лимиты включены: в форме постинга дейтсвуют ограничения на размер контента</string>
    <string name="test_pref_mt_dont_enforce_limits_summary_on">Лимиты выключены: в форме постинга можно вводить контент любой длины</string>
    <string name="test_pref_mt_dont_enforce_limits_title">Игнорировать лимиты</string>
    <string name="test_pref_portal_server_key">test_preferences_portal_server</string>
    <string name="test_pref_portal_server_title">Portal Server</string>
    <string name="test_pref_web_server_key">test_preferences_web_server</string>
    <string name="test_pref_web_server_title">Web Server</string>
    <string name="test_pref_wmf_server_key">test_preferences_wmf_server</string>
    <string name="test_pref_wmf_server_title">WMF Server</string>
    <string name="test_pref_xmpp_server_key">test_preferences_xmpp_server</string>
    <string name="test_pref_xmpp_server_title">XMPP Server</string>
    <string name="test_show_update_always_summary_off">Частота уведомления о наличии обновления согласно настройкам PMS</string>
    <string name="test_show_update_always_summary_on">Показывать уведомление о наличии обновления при каждом запуске приложения</string>
    <string name="test_show_update_always_title">Предлагать всегда</string>
    <string name="text_send_present">Сделать подарок</string>
    <string name="to_black_list">Заблокировать пользователя</string>
    <string name="write_message">Написать сообщение</string>
</resources>