<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/reply" android:title="@string/reply" />
    <item android:id="@id/go_to_comment_user" android:title="@string/go_to_author" />
    <item android:id="@id/go_to_comment_group" android:title="@string/go_to_group" />
    <item android:id="@id/copy" android:title="@string/copy_text" />
    <item android:id="@id/delete" android:title="@string/delete_message_menu_text" />
    <item android:id="@id/spam" android:title="@string/spam_messages_menu_text" />
    <item android:id="@id/block" android:title="@string/block_user" />
    <item android:id="@id/resend" android:title="@string/resend_menu_text" />
    <item android:id="@id/edit_message" android:title="@string/edit_menu_text" />
    <item android:id="@id/error_info" android:title="@string/error_info" />
</menu>