<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/message" android:visible="false" android:title="@string/write_message" app:showAsAction="always" />
    <item android:id="@id/delete_from_friends" android:visible="false" android:title="@string/delete_from_friends" app:showAsAction="never" />
    <item android:id="@id/unsubscribe" android:visible="false" android:title="@string/delete_from_feed" app:showAsAction="never" />
    <item android:id="@id/copy_link" android:visible="true" android:title="@string/copy_link" app:showAsAction="never" />
    <item android:id="@id/invite_group" android:visible="true" android:title="@string/invite_to_group_menu" app:showAsAction="never" />
    <item android:id="@id/set_relation" android:visible="true" android:title="@string/set_relation" app:showAsAction="never" />
    <item android:id="@id/invite_friend" android:visible="false" android:title="@string/invite_friend" app:showAsAction="never" />
    <item android:id="@id/complaint" android:visible="true" android:title="@string/complaint" app:showAsAction="never" />
    <item android:id="@id/black_list" android:visible="true" android:title="@string/to_black_list" app:showAsAction="never" />
</menu>