<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_menu_share_holo_dark" android:id="@id/share_menu_item" android:visible="false" android:title="@string/description_share" app:showAsAction="always" />
    <item android:icon="@drawable/ic_class" android:id="@id/like_menu_item" android:visible="false" android:title="@string/like" app:showAsAction="always" />
    <item android:id="@id/media_route_menu_item" android:title="@string/route" app:showAsAction="always" app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider" />
    <item android:id="@id/visit_target_item" android:visible="false" android:title="@string/open_in_browser" app:showAsAction="always" />
</menu>